--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  height: 100vh;
+}
+/* navbar */
+.navbar {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #2f3135;
+}
+.navbar__option {
+  color: gray;
+  text-decoration: none;
+  transition: transform ease-in-out 0.3s;
+  cursor: pointer;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.navbar__option:hover {
+  transform: scale(1.2);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.navbar__contact {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5px;
 }
+.navbar__contact > p {
+  font-size: x-small;
+}
+/* main */
+.home,
+.projects,
+.error {
+  flex: 1;
+  background-color: #363a3f;
+}
+/* home */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* footer */
+.footer {
+  color: gray;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #2f3135;
+}
+.footer > p {
+  font-size: small;
+}
+.footer__admin {
+  margin-left: 100px;
+  cursor: pointer;
 }
