--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .app {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow-y: hidden;
   height: 100vh;
 }
+
 /* navbar */
 .navbar {
   height: 80px;
@@ -41,7 +42,57 @@
   background-color: #363a3f;
 }
 /* home */
+/* projects */
+.projects {
+  flex-direction: column;
+  display: grid;
+  place-items: center;
+  overflow: scroll;
+}
+/* hide scrollbar for chrome sarari opera */
+.projects::-webkit-scrollbar {
+  display: none;
+}
+/* hide scrollbar for ie edge firefox */
+.projects {
+  -ms-overflow-style: none; /*IE Edge*/
+  scrollbar-width: none; /*firefox*/
+}
+.project {
+  margin: 10px;
+  display: flex;
+  position: relative;
+}
+.project__image {
+  object-fit: cover !important;
+  height: 400px !important;
+}
+.project__image:hover {
+  transform: scale(1.1);
+  transition: transform ease-in-out 0.3s !important;
+}
+.project__delete {
+  color: gray;
+  position: absolute;
+  display: 100;
+  cursor: pointer;
+  font-size: 2rem !important;
+  right: 5px;
+  top: -3px;
+}
+.project__delete:hover {
+  color: red;
+}
 
+.project__button {
+  color: gray !important;
+  background-color: #2f3135 !important;
+  transition: transform ease-in-out 0.3s !important;
+}
+.project__button:hover {
+  color: white !important;
+  transform: scale(1.1);
+}
 /* footer */
 .footer {
   color: gray;
@@ -56,5 +107,19 @@
 }
 .footer__admin {
   margin-left: 100px;
+  transition: transform ease-in-out 0.3s !important;
   cursor: pointer;
+}
+.footer__admin:hover {
+  transform: scale(1.1);
+  color: white;
+}
+.footer__upload {
+  cursor: pointer;
+  padding-left: 10px;
+  transition: transform ease-in-out 0.3s !important;
+}
+.footer__upload:hover {
+  transform: scale(1.1);
+  color: white;
 }
